# backup-tagger

./: .envrc  .gitignore  Cargo.toml  NFS.md  README.md  flake.nix
nix/btagger/: packages.nix
nix/core/: rust.nix  shells.nix
src/: main.rs
