[package]
name = "btagger"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
clap = { version = "4.5.39", features = ["derive", "cargo"] }
chrono = "0.4.41"
chrono-tz = "0.10.4"
cron-parser = "0.10.0"
color-eyre = "0.6"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing = { version="0.1.13", features = ["valuable"] }
tracing-error = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
valuable = { version = "0.1.1", features = ["derive"] }

[profile.dev.package.backtrace]
opt-level = 3
